converted player functions into class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <canvas id="gameWindow" width="700px" height="1000px"></canvas>
-    <div class="btn-caddy"><button id="roll">Roll</button></div>
+    <div class="btn-caddy">
+      <button id="roll">Roll</button>
+      <button id="take">Take</button>
+      <button id="accend">Go Back</button>
+    </div>
 
     <script src="resources/scripts/app.js" async defer></script>
   </body>
