--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="resources/styles/main.css" />
   </head>
   <body>
-    <canvas id="gameWindow" width="700px" height="1000px"></canvas>
-    <div class="btn-caddy">
-      <button id="roll">Roll</button>
-      <button id="take">Take</button>
-      <button id="accend">Go Back</button>
+    <div id="app-container">
+      <canvas id="gameWindow" width="1000px" height="1000px"></canvas>
+      <div class="btn-caddy">
+        <button id="roll">Roll</button>
+        <button id="take">Take</button>
+        <button id="accend">Go Back</button>
+      </div>
     </div>
 
     <script src="resources/scripts/app.js" async defer></script>
