--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <body>
     <div id="app-container">
       <canvas id="gameWindow" width="1000px" height="1000px"></canvas>
-      <div class="btn-caddy">
+      <div id="btn-caddy">
         <button id="roll">Roll</button>
         <button id="take">Take</button>
         <button id="accend">Go Back</button>
+        <button id="replay">Replay?</button>
       </div>
     </div>
 
